# lib-version

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: linters.yml  publish.yml
src/lib_version/: versioning.py
src/remla24_team8_lib_version/: __main__.py  versioning.py
tests/: test_version.py
versioning_util/versioning_util/: versioning.py
