[tool.poetry]
name = "remla24-team8-lib-version"
version = "1.0.0"
description = "A version-aware library that can can be asked for the version of the library"
authors = [
    "Tip ten Brink <T.M.tenBrink@student.tudelft.nl>", 
    "Felipe Bononi Bello <bello2001felipe@gmail.com>", 
    "Dielof van Loon <d.i.vanloon@student.tudelft.nl>", 
    "Sayf El Kaddouri <sayfgmaul@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.scripts]
get_version = "remla24_team8_lib_version.versioning:VersionUtil.get_version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
